# sow_compare

./: main.py  pyproject.toml  readFiles.py  sow_compare.py  sow_rag_index.py
backup/: cross_sow_compare.py  sow_compare_baq.py  sow_rag_index_baq.py
docs/: Cross Enc.docx  ~$oss Enc.docx
output/: cross_enc_sow_comparison_report.json  sow_comparison_report.json
static/: SOWDev - Copy.docx  SOWDev.docx  SOWTemplateDoc.docx  SOW_temp - Copy.docx  SOW_temp.docx  sow_all_headings.json  sow_comparison_report.json  sow_faiss.index  sow_metadata.json
static/logs/: sow_compare_log_20251113_151300.txt  sow_compare_log_20251113_162311.txt  sow_compare_log_20251113_165151.txt  sow_compare_log_20251113_165717.txt  sow_compare_log_20251113_165858.txt  sow_compare_log_20251118_072554.txt  sow_compare_log_20251118_072954.txt  sow_compare_sentence_refine_20251118_075041.txt  sow_compare_sentence_refine_20251118_075319.txt  sow_sections_20251113_151203.txt  sow_sections_20251113_162240.txt  template_sow_chunks_20251113_151206.txt  template_sow_chunks_20251113_162243.txt  template_sow_sections_20251118_074759.txt  uploaded_sow_sections_20251113_162308.txt  uploaded_sow_sections_20251113_165149.txt  uploaded_sow_sections_20251113_165714.txt  uploaded_sow_sections_20251113_165854.txt  uploaded_sow_sections_20251118_072046.txt  uploaded_sow_sections_20251118_072553.txt  uploaded_sow_sections_20251118_072951.txt
test/: readFiles.py  read_file_3.py  read_files_2.py  sow_compare.py  sow_compare_2.py  sow_rag_index.py
